# dataflow-analytics-rag-platform

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: analytics.py  main.py  rag.py
docs/: analytics.md  etl.md  ops.md
etl/: process_events.py
rag/: build_index.py  doc_loader.py  embeddings.py  prompt.py
shared/: s3_client.py
utils/: generate_events.py  get_s3_fs.py
